--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="environment">Environment</string>
     <string name="sport">Sport</string>
     <string name="economics">Economics</string>
+    <string name="placeholder">Place Holder</string>
+    <string name="errormsg">Error Loading data</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
